# Survey2026

./: .gitmodules  README.md  gradle.properties  index.html
.github/workflows/: AndroidBuild.yml
app/: build.gradle.kts  download_models.sh
app/src/androidTest/java/com/negi/survey/slm/: SlmHelperInstrumentationTest.kt
app/src/androidTest/java/com/negi/survey/vm/: AiViewModelSurveyBaseTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: survey_config10.yaml  survey_config20.yaml  survey_config_sw_10.yaml  survey_config_sw_10_q4_0.yaml  survey_config_sw_10_q5_0.yaml  survey_config_sw_20.yaml  survey_config_sw_20_q4_0.yaml  survey_config_sw_20_q5_0.yaml
app/src/main/kotlin/com/negi/survey/: AppRingLogStore.kt  CrashCapture.kt  MainActivity.kt  SurveyApp.kt
app/src/main/kotlin/com/negi/survey/config/: SurveyConfigLoader.kt
app/src/main/kotlin/com/negi/survey/net/: CrashLogStore.kt  GitHubDiagnosticsConfigStore.kt  GitHubLogUploader.kt  GitHubUploadWorker.kt  GitHubUploader.kt  HttpUrlFileDownloader.kt  RuntimeLogStore.kt  SupabaseCrashLogStore.kt  SupabaseCrashUploadWorker.kt  SupabaseDiagnosticsConfigStore.kt  SupabaseLogUploader.kt  SupabaseStorageUploader.kt  SupabaseUploadRescheduleReceiver.kt  SupabaseUploadWorker.kt  SupabaseUploader.kt  UploadRescheduleReceiver.kt  VoiceUploadCompletionStore.kt
app/src/main/kotlin/com/negi/survey/screens/: AiScreen.kt  DoneScreen.kt  IntroScreen.kt  ReviewScreen.kt
app/src/main/kotlin/com/negi/survey/slm/: AiRepository.kt  FollowupExtractor.kt  LiteRtLM.kt  SLM.kt
app/src/main/kotlin/com/negi/survey/utils/: ExportUtils.kt  HeavyInitializer.kt  SurveyFileName.kt
app/src/main/kotlin/com/negi/survey/vm/: AiViewModel.kt  AppViewModel.kt  NodeMapping.kt  SurveyViewModel.kt  UploadQueueViewModel.kt  WhisperSpeechController.kt
app/src/main/kotlin/com/negi/survey/whisper/: Recorder.kt  WaveCodec.kt  WhisperEngine.kt
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
nativelib/: build.gradle.kts
nativelib/src/main/jni/whisper/: CMakeLists.txt  whisperLib.c
nativelib/src/main/jni/whisper/patch/: ggml-cpu-extra.cpp
nativelib/src/main/kotlin/com/whispercpp/whisper/: LibWhisper.kt
